Improve face registration, camera recovery and per-user event storage [skip render]